--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,21 +29,15 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".main.MainActivity"
-            android:screenOrientation="portrait">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".registration.RegistrationActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".login.LoginActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".settings.SettingsActivity"
-            android:screenOrientation="portrait" />
+        <activity android:name=".registration.RegistrationActivity" />
+        <activity android:name=".login.LoginActivity" />
+        <activity android:name=".settings.SettingsActivity" />
     </application>
 
 </manifest>
